<resources>
    <string name="app_name" translatable="false">Android AudioQR Demo</string>
    <string name="permissionRequestExplanation">Microphone permission is needed to receive messages via sound.</string>
    <string name="l0permissionRequestExplanation">Data-over-sound permission is needed to send/receive messages via sound.</string>
    <string-array name="numberOfFrequenciesVisible">
        <item>8 Frequencies</item>
        <item>16 Frequencies</item>
        <item>24 Frequencies</item>
        <item>32 Frequencies</item>
        <item>40 Frequencies</item>
        <item>48 Frequencies</item>
    </string-array>
    <string-array name="numberOfFrequencies">
        <item>8</item>
        <item>16</item>
        <item>24</item>
        <item>32</item>
        <item>40</item>
        <item>48</item>
    </string-array>

    <string name="action_reset_settings_message">Do you want to reset all settings?</string>
    <string name="action_reset_settings_title">Reset Settings</string>
    <string name="signal_generator_not_created">No Signal was created yet!</string>
    <string name="encoder_exception_text_too_long">The text is too long please type in a shorter message!</string>
    <string name="encoder_exception_text_too_many_bytes">Too many bytes entered</string>
    <string name="decoder_exception_state">Failed to start listening, error message :</string>
    <string name="decoder_exception_io">Failed to start listening due to an error on loading the default detection profile, details:</string>
    <string name="decoder_exception_config">Failed to start listening due to an error on loading the default detection profile, details:</string>
    <string name="permission_request_explanation_positive">Open the Permission Menu</string>
    <string name="permission_request_explanation_negative">No thanks</string>
    <string name="detection_crc_incorrect">CRC checksum incorrect. Please try again.</string>
    <string name="detection_crc_incorrect_keep_listening">CRC checksum incorrect. Keep listening. Please try again</string>
    <string name="detection_crc_incorrect_toast_message">Detected a message, but CRC checksum is incorrect.</string>
    <string name="detection_crc_incorrect_keep_listening_toast_message">Detected a message, but CRC checksum is incorrect. Keep listening.</string>
    <string name="on_receiving_listening_permission_required">Data-over-sound permission required to receive messages</string>
    <string name="on_sending_sending_permission_required">Data-over-sound permission required to send messages</string>
    <string name="decoder_start_text">Start listening…</string>
    <string name="settings_bitperiod_text">Bit period (%s ms)</string>
    <string name="settings_pauseperiod_text">Pause period (%s ms)</string>
    <string name="settings_frequency0_text">Base frequency (%s Hz)</string>
    <string name="settings_frequencyspace_text">Frequency space (%s Hz)</string>
    <string name="settings_maxbytes_text">Maximum message length (%s bytes)</string>
    <string name="settings_numberoffrequencies_text">Number of frequencies (%s)</string>
    <string name="settings_numberoffrequencies_text_dialog">Number of frequencies</string>
    <string name="settings_loudness_text">Volume (%s)</string>
    <string name="settings_reset_title">Reset settings</string>
    <string name="settings_preset_title">Preset (%s)</string>
    <string name="gui_message_title">Preset configuration (%s)</string>
    <string name="section_name_sending">Send</string>
    <string name="section_name_receiving">Receive</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_instructions">Developers</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_help">Help</string>
    <string name="preset_undefined">undefined</string>
    <string name="settings_configuration_alert_title">Select configuration preset</string>
    <string name="instructions_title">Instruction</string>
    <string name="instructions_text">Welcome to the Android AudioQR Demo.
\n\nThis app demonstrates the use of the SoniTalk protocol for communication over sound.
\n\nIf a message was detected but could not be decoded, you will see the following message: (%s)
\n\nThe Android AudioQR Demo app needs access to the microphone for receiving messages and the custom data-over-sound permission to send and receive messages.
\n\nWe do not transmit any data from your phone (apart from the text you decide to send) and do not store any privacy-sensitive data.</string>
    <string name="show_toast_no_characters_entered">Please enter a value!</string>
    <string name="show_toast_no_numeric_character_entered">Please enter only numeric values!</string>
    <string name="show_toast_lower_limit_exceeded">Please enter a value above the limit of %d!</string>
    <string name="show_toast_higher_limit_exceeded">Please enter a value below the limit of %d!</string>
</resources>
